# 2025-final

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.c
src/: db.c  db.h  handlers.c  handlers.h  main.c  server.c  server.h  utils.c  utils.h
test/: test_db.c
utils/: example_courses.csv  example_enrollments.csv  example_students.csv  transform_courses.py  transform_enrollments.py  transform_students.py  upload_courses.py  upload_courses_fast.py  upload_enrollments.py  upload_enrollments_fast.py  upload_students.py  upload_students_fast.py
web/: app.js  index.html  styles.css
